examples/should_fail/circularity1.hs
MLM
    { name = Name "circularity"
    , classes =
        [ Class
            { isAbstract = False
            , level = 1
            , name = Name "A"
            , parents =
                [ Name "A" ]
            , classifier = Nothing
            , attributes = []
            , operations = []
            , slots = []
            }
        ]
    , associations = []
    , links = []
    }
